@@ -150,6 +150,60 @@ int32_t SPVM__Net__SSLeay__X509_NAME__entry_count(SPVM_ENV* env, SPVM_VALUE* sta
   return 0;
 }
 
+int32_t SPVM__Net__SSLeay__X509_NAME__add_entry_by_NID(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  int32_t nid = stack[1].ival;
+  
+  int32_t type = stack[2].ival;
+  
+  void* obj_bytes = stack[3].oval;
+  
+  int32_t len = stack[4].ival;
+  
+  int32_t loc = stack[5].ival;
+  
+  int32_t set = stack[6].ival;
+  
+  X509_NAME* self = env->get_pointer(env, stack, obj_self);
+  
+  if (!obj_bytes) {
+    return env->die(env, stack, "The bytes $bytes must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  int32_t bytes_length = env->length(env, stack, obj_bytes);
+  
+  if (len < 0) {
+    len = bytes_length;
+  }
+  
+  const char* bytes = env->get_chars(env, stack, obj_bytes);
+  
+  int32_t status = X509_NAME_add_entry_by_NID(self, nid, type, bytes, len, loc, set);
+  
+  if (!(status == 1)) {
+    int64_t ssl_error = ERR_peek_last_error();
+    
+    char* ssl_error_string = env->get_stack_tmp_buffer(env, stack);
+    ERR_error_string_n(ssl_error, ssl_error_string, SPVM_NATIVE_C_STACK_TMP_BUFFER_SIZE);
+    
+    env->die(env, stack, "[OpenSSL Error]X509_NAME_add_entry_by_NID failed:%s.", ssl_error_string, __func__, FILE_NAME, __LINE__);
+    
+    int32_t tmp_error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+    error_id = tmp_error_id;
+    
+    return error_id;
+  }
+  
+  stack[0].ival = status;
+  
+  return 0;
+}
+
 int32_t SPVM__Net__SSLeay__X509_NAME__DESTROY(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t error_id = 0;
