@@ -8,6 +8,7 @@
     * Add Net::SSLeay::X509_VERIFY_PARAM#new method.
     * Add Net::SSLeay::X509_NAME_ENTRY#new method.
     * Add Net::SSLeay::X509_NAME#new method.
+    * Add Net::SSLeay::X509_NAME#add_entry_by_NID method.
   [Changes]
     * Change the default value of $namele in Net::SSLeay::X509_VERIFY_PARAM#set1_host method.
       [Before]
